--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1> Hello World</h1>
+    <script>    
+        console.log('Hello World'); // this is my first java script code
+    </script>
 </body>
 </html>
